Prevent NPE by using an empty string as default program name